@@ -14,7 +14,7 @@ MY_CHECK_EXCEPTIONS
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h getopt.h slist.h hash_map.h glob.h regex.h term.h inttypes.h)
+AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h getopt.h slist.h hash_map.h sstream glob.h regex.h term.h inttypes.h)
 
 dnl Checks for libraries.
 AC_SEARCH_LIBS(tputs, termcap curses ncurses)
